--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,4 +92,4 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: 🧱 Build all services (backend, frontend, db)
-        run: docker-compose build
+        run: docker compose build
