--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.2.0",
+    "@mui/material": "^7.2.0",
+    "@mui/x-charts": "^8.9.2",
+    "@mui/x-data-grid": "^8.9.2",
+    "@mui/x-date-pickers": "^8.9.2",
+    "@mui/x-tree-view": "^8.9.2",
     "@popperjs/core": "^2.11.8",
+    "@react-spring/web": "^10.0.1",
     "@rsuite/icons": "^1.3.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -11,6 +20,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "mdb-react-ui-kit": "^9.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.10",
@@ -20,7 +31,8 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "rsuite": "^5.83.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
