--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,8 +33,7 @@
 # volumes:
 #   postgres_data:
 
-
-version: '3.3'
+version: "3.3"
 
 services:
   db:
@@ -69,4 +68,3 @@ services:
 
 volumes:
   db-data:
-
