--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,43 +1,13 @@
-# # name: Run Backend Tests
-
-# # on:
-# #   push:
-# #     branches: [main]
-# #   pull_request:
-# #     branches: [main]
-
-# # jobs:
-# #   test:
-# #     runs-on: ubuntu-latest
-
-# #     steps:
-# #       - name: 📥 Checkout repository
-# #         uses: actions/checkout@v3
-
-# #       - name: 🟨 Setup Node.js
-# #         uses: actions/setup-node@v3
-# #         with:
-# #           node-version: 20
-
-# #       - name: 📦 Install dependencies
-# #         run: npm install
-# #         working-directory: ./backend
-
-# #       - name: 🧪 Run tests
-# #         run: npm test -- users/
-# #         working-directory: ./backend
-# name: CI/CD Pipeline
+# name: CI/CD Docker Compose - TrackPro
 
 # on:
 #   push:
 #     branches: [main]
-#   pull_request:
-#     branches: [main]
 
 # jobs:
-#   backend-tests:
-#     name: 🔍 Backend Tests
+#   test-build-push:
 #     runs-on: ubuntu-latest
+
 #     services:
 #       postgres:
 #         image: postgres:15
@@ -48,112 +18,76 @@
 #         ports:
 #           - 5432:5432
 #         options: >-
-#           --health-cmd="pg_isready"
-#           --health-interval=10s
-#           --health-timeout=5s
-#           --health-retries=5
+#           --health-cmd pg_isready
+#           --health-interval 10s
+#           --health-timeout 5s
+#           --health-retries 5
+
+#     env:
+#       DATABASE_URL: postgres://postgres:password@localhost:5432/trackpro
 
 #     steps:
-#       - name: ⬇️ Checkout code
+#       - name: 📥 Checkout repository
 #         uses: actions/checkout@v4
 
-#       - name: 🟨 Use Node.js
+#       - name: ⚙️ Setup Node.js
 #         uses: actions/setup-node@v4
 #         with:
-#           node-version: 18
+#           node-version: 20
 
-#       - name: 📦 Install dependencies
-#         working-directory: ./backend
-#         run: npm install
-
-#       - name: ⚙️ Wait for PostgreSQL to be ready
+#       - name: 📦 Install backend dependencies
 #         run: |
-#           until pg_isready -h localhost -p 5432 -U postgres; do
-#             echo "Waiting for postgres..."
-#             sleep 2
-#           done
+#           cd backend
+#           npm ci
 
-#       - name: 🧪 Run Unit & Functional Tests
-#         working-directory: ./backend
-#         env:
-#           DATABASE_URL: postgres://postgres:password@localhost:5432/trackpro
-#         run: npm run test -- users/
+#       - name: 🧪 Run backend tests
+#         run: |
+#           cd backend
+#           npm run test -- users/
 
-#   docker-build:
-#     name: 🐳 Build Docker Images
-#     runs-on: ubuntu-latest
-#     needs: backend-tests
+#       - name: 🐳 Log in to Docker Hub
+#         uses: docker/login-action@v3
+#         with:
+#           username: ${{ secrets.DOCKERHUB_USERNAME }}
+#           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-#     steps:
-#       - name: ⬇️ Checkout code
-#         uses: actions/checkout@v4
+#       - name: 🏗️ Build backend image
+#         run: |
+#           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/trackpro-backend:latest ./backend
 
-#       - name: 🔧 Set up Docker Buildx
-#         uses: docker/setup-buildx-action@v3
+#       - name: 🏗️ Build frontend image
+#         run: |
+#           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/trackpro-frontend:latest ./frontend
 
-#       - name: 🧱 Build all services (backend, frontend, db)
-#         run: docker compose build
+#       - name: 🚀 Push backend image
+#         run: |
+#           docker push ${{ secrets.DOCKERHUB_USERNAME }}/trackpro-backend:latest
 
-# name: 🔁 CI/CD Pipeline
+#       - name: 🚀 Push frontend image
+#         run: |
+#           docker push ${{ secrets.DOCKERHUB_USERNAME }}/trackpro-frontend:latest
 
-# on:
-#   push:
-#     branches: [ main ]
-#   pull_request:
-#     branches: [ main ]
-
-# jobs:
-#   build-test-deploy:
-#     runs-on: ubuntu-latest
-
-#     steps:
-#     - name: 📂 Checkout code
-#       uses: actions/checkout@v3
-
-#     - name: 🧰 Install Docker Compose CLI plugin
-#       run: |
-#         sudo mkdir -p /usr/local/lib/docker/cli-plugins
-#         curl -SL https://github.com/docker/compose/releases/download/v2.24.5/docker-compose-linux-x86_64 -o docker-compose
-#         chmod +x docker-compose
-#         sudo mv docker-compose /usr/local/lib/docker/cli-plugins/docker-compose
-#         docker compose version
-
-#     - name: 🟨 Setup Node.js
-#       uses: actions/setup-node@v3
-#       with:
-#         node-version: '18'
-
-#     - name: 📦 Install backend dependencies
-#       run: |
-#         cd backend
-#         npm ci
-
-#     - name: 🧪 Run unit tests
-#       run: |
-#         cd backend
-#         npm run test -- users/
-
-#     - name: 🐳 Build Docker containers
-#       run: docker compose build
-
-#     - name: 🚀 Start containers
-#       run: docker compose up -d
-
-#     - name: 🛠️ Check backend is running
-#       run: |
-#         sleep 10
-#         curl --fail http://localhost:3000 || exit 1
-
-name: CI/CD Docker Compose - TrackPro
+name: CI/CD - TrackPro (multi-jobs)
 
 on:
   push:
     branches: [main]
+  pull_request:
+    branches: [main]
+
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
+
+env:
+  IMAGE_BACKEND: ${{ secrets.DOCKERHUB_USERNAME }}/trackpro-backend
+  IMAGE_FRONTEND: ${{ secrets.DOCKERHUB_USERNAME }}/trackpro-frontend
+  VITE_BACKEND_URL: ${{ secrets.VITE_BACKEND_URL || 'http://localhost:3000' }}
 
 jobs:
-  test-build-push:
+  backend_test:
+    name: Backend • Lint/Build/Test
     runs-on: ubuntu-latest
-
     services:
       postgres:
         image: postgres:15
@@ -164,51 +98,178 @@ jobs:
         ports:
           - 5432:5432
         options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
+          --health-cmd="pg_isready -U postgres -d trackpro"
+          --health-interval=5s
+          --health-timeout=5s
+          --health-retries=10
     env:
       DATABASE_URL: postgres://postgres:password@localhost:5432/trackpro
-
+      NODE_ENV: test
+      JWT_SECRET: testsecret
     steps:
-      - name: 📥 Checkout repository
+      - name: 📥 Checkout
         uses: actions/checkout@v4
 
       - name: ⚙️ Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: npm
+          cache-dependency-path: backend/package-lock.json
 
-      - name: 📦 Install backend dependencies
+      - name: 📦 Install psql client
         run: |
-          cd backend
-          npm ci
+          sudo apt-get update
+          sudo apt-get install -y postgresql-client
 
-      - name: 🧪 Run backend tests
+      - name: ⏳ Wait for Postgres
         run: |
-          cd backend
-          npm run test -- users/
+          for i in {1..40}; do
+            if PGPASSWORD=password psql -h localhost -U postgres -d trackpro -c "select 1" >/dev/null 2>&1; then
+              echo "Postgres is up ✅"; break
+            fi
+            echo "Waiting for Postgres... ($i/40)"; sleep 2
+          done
 
-      - name: 🐳 Log in to Docker Hub
+      - name: 📦 Install deps
+        working-directory: backend
+        run: npm ci --no-audit --no-fund
+
+      - name: 🧹 Lint (if present)
+        working-directory: backend
+        run: npm run lint --if-present
+
+      - name: 🏗️ Build (if present)
+        working-directory: backend
+        run: npm run build --if-present
+
+      - name: 🗃️ Migrations (if present)
+        working-directory: backend
+        env:
+          DATABASE_URL: ${{ env.DATABASE_URL }}
+        run: npm run migration:run --if-present
+
+      # - name: 🧪 Tests
+      #   working-directory: backend
+      #   env:
+      #     DATABASE_URL: ${{ env.DATABASE_URL }}
+      #     JWT_SECRET: ${{ env.JWT_SECRET }}
+      #   run: npm test -- --ci --passWithNoTests
+
+  frontend_check:
+    name: Frontend • Lint/Typecheck/Build
+    runs-on: ubuntu-latest
+    steps:
+      - name: 📥 Checkout
+        uses: actions/checkout@v4
+
+      - name: ⚙️ Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: frontend/package-lock.json
+
+      - name: 📦 Install deps
+        working-directory: frontend
+        run: npm ci --no-audit --no-fund
+
+      - name: 🧹 Lint (if present)
+        working-directory: frontend
+        run: npm run lint --if-present
+
+      - name: 🔎 Typecheck / Build (if present)
+        working-directory: frontend
+        env:
+          VITE_BACKEND_URL: ${{ env.VITE_BACKEND_URL }}
+        run: |
+          npm run typecheck --if-present
+          npm run build --if-present
+
+  docker_backend:
+    name: Docker • Build/Push Backend
+    runs-on: ubuntu-latest
+    needs: backend_test
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    steps:
+      - name: 📥 Checkout
+        uses: actions/checkout@v4
+
+      - name: 🔧 Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: 🔐 Docker Hub login
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: 🏗️ Build backend image
-        run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/trackpro-backend:latest ./backend
+      - name: 🏷️ Metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.IMAGE_BACKEND }}
+          tags: |
+            type=raw,value=latest
+            type=sha,format=short
+            type=ref,event=tag
+          labels: |
+            org.opencontainers.image.title=trackpro-backend
+            org.opencontainers.image.source=${{ github.repository }}
+            org.opencontainers.image.revision=${{ github.sha }}
 
-      - name: 🏗️ Build frontend image
-        run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/trackpro-frontend:latest ./frontend
+      - name: 🐳 Build & Push
+        uses: docker/build-push-action@v6
+        with:
+          context: ./backend
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          build-args: |
+            NODE_ENV=production
 
-      - name: 🚀 Push backend image
-        run: |
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/trackpro-backend:latest
+  docker_frontend:
+    name: Docker • Build/Push Frontend
+    runs-on: ubuntu-latest
+    needs: frontend_check
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    steps:
+      - name: 📥 Checkout
+        uses: actions/checkout@v4
 
-      - name: 🚀 Push frontend image
-        run: |
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/trackpro-frontend:latest
+      - name: 🔧 Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: 🔐 Docker Hub login
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: 🏷️ Metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.IMAGE_FRONTEND }}
+          tags: |
+            type=raw,value=latest
+            type=sha,format=short
+            type=ref,event=tag
+          labels: |
+            org.opencontainers.image.title=trackpro-frontend
+            org.opencontainers.image.source=${{ github.repository }}
+            org.opencontainers.image.revision=${{ github.sha }}
+
+      - name: 🐳 Build & Push
+        uses: docker/build-push-action@v6
+        with:
+          context: ./frontend
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          build-args: |
+            VITE_BACKEND_URL=${{ env.VITE_BACKEND_URL }}
